--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
+<script src="turf.min.js" charset="utf-8"></script>
 </html>
